--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-body{
-    font-size: large;
-}
 
 div{
     dsfdfsdf
@@ -10,4 +7,6 @@ img{
     width: 100px;
     height: 100px;
 }
-SKISvv
+
+
+what is happening.
