changed css test

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{
-    font-size: large;
+    font-size: small;
 }
 
 div{
-    dsfdfsdf
+    dhahaha its gone
 }
 
 img{
@@ -11,3 +11,4 @@ img{
     height: 100px;
 }
 SKISvv
+dfnsadfsadfasdf
