--- a/index.css
+++ b/index.css
@@ -168,3 +168,9 @@ font-style: bold;
     border-color: transparent;
   }
 }
+
+p{
+font-family: "garamond-premier-pro", serif;
+font-weight: 400;
+font-style: normal;
+}
